<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpio_discovery_mode"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gpio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpio_1"
            android:textSize="24sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gpio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpio_2"
            android:textSize="24sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gpio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpio_3"
            android:textSize="24sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gpio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpio_4"
            android:textSize="24sp" />

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio5"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_5"-->
<!--            android:textSize="24sp" />-->
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:paddingTop="16dp"-->
<!--        android:paddingBottom="16dp">-->

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio6"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_6"-->
<!--            android:textSize="24sp" />-->

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio7"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_7"-->
<!--            android:textSize="24sp" />-->

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio8"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_8"-->
<!--            android:textSize="24sp" />-->

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio9"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_9"-->
<!--            android:textSize="24sp" />-->

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio10"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_10"-->
<!--            android:textSize="24sp" />-->
<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:paddingTop="16dp"-->
<!--        android:paddingBottom="16dp">-->

<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/gpio11"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/gpio_11"-->
<!--            android:textSize="24sp" />-->
<!--    </LinearLayout>-->

    <Button
        android:id="@+id/btnRefreshGpio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_list" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F5F5F5"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/gpio_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"/>
    </ScrollView>

    <TextView
        android:text="@string/usb_devices"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:background="#F5F5F5"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/device_container"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:text="@string/log_output"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#EEE"
        android:fillViewport="true"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tv_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Logs will appear here..."
            android:textSize="14sp"
            tools:ignore="HardcodedText" />
    </ScrollView>

</LinearLayout>